Setup general layout of the page

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,74 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>    
+    <div id="header" style="height: 200px">
+      <div class="row">
+          <div class="col-md-4">
+            <img src="bwhs-logo.png" alt="" style="width:80%; margin-left:15px;">
+          </div>
+          <div class="col-md-8">
+          </div>
+      </div>
+      <nav class="navbar navbar-expand-md navbar-dark bg-dark static-top text-white" style="height:50px;"> 
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">HOME<span class="sr-only">HOME</span></a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="#">TEAM<span class="sr-only"></span></a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="#">HISTORY<span class="sr-only"></span></a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="#">RESEARCH<span class="sr-only"></span></a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="#">NEWSLETTERS<span class="sr-only"></span></a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="#">WEBINARS<span class="sr-only"></span></a>
+          </li>
+        </ul>  
+      </nav>
+    </div>
+    <div id="content" style="background: linear-gradient(to bottom, #e6f7ff 30%, #ffffff 100%); min-height:80%;">
+      <div class="row">
+        <div class="col">
+          <div id="root"></div>   
+        </div>
+        <div class="col">
+          <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md-8 pt-4">
+              <h1>BWHS Questionnaire Lookup</h1>
+              <p>
+                Your reference number is the 8 digit number starting with at least two zeros that is found on the bottom of each page of your questionnaire or at the bottom of the return address card on any of your BWHS newsletters. (The reference number does not include the “P” and any numbers after it that are found on the questionnaire, or the “R” if there is one on the newsletter.)
+              </p>
+              <p>
+                If you would prefer to complete the paper version of the questionnaire, please contact the BWHS at 1-800-786-0814 or bwhs@bu.edu to request a mailing. If you would prefer a telephone interview, let us know by calling us or sending an email.
+              </p>              
+            </div>
+            <div class="col-md-2"></div>
+          </div>          
+        </div>
+      </div>
+    </div>
+    <div id="footer" class="bg-dark" style="height: 200px; bottom:0; position:fixed; width:100%; padding-top:25px;">
+      <div class="row">
+        <div class="col-md-2">
+          <img src="bu-logo.gif" alt="" style="width:80%; margin-left:15px;">
+        </div>
+        <div class="col-md-2 text-white">
+          Boston University Medical Center
+          Slone Epidemiology Center
+          Black Women's Health Study
+          72 East Concord Street, L-7
+          Boston, MA 02118
+        </div>
+        <div class="col-md-8">
+        </div>
+      </div>
+    </div> 
   </body>
 </html>
