Update text on landing page and remove top nav bar and footer from landing page

--- a/public/index.html
+++ b/public/index.html
@@ -23,28 +23,7 @@
           <div class="col-md-8">
           </div>
       </div>
-      <nav class="navbar navbar-expand-md navbar-dark bg-dark static-top text-white" style="height:50px;"> 
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">HOME<span class="sr-only">HOME</span></a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#">TEAM<span class="sr-only"></span></a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#">HISTORY<span class="sr-only"></span></a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#">RESEARCH<span class="sr-only"></span></a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#">NEWSLETTERS<span class="sr-only"></span></a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#">WEBINARS<span class="sr-only"></span></a>
-          </li>
-        </ul>  
-      </nav>
+      
     </div>
     <div id="content" style="background: linear-gradient(to bottom, #e6f7ff 30%, #ffffff 100%); min-height:80%;">
       <div class="row">
@@ -55,20 +34,38 @@
           <div class="row">
             <div class="col-md-2"></div>
             <div class="col-md-8 pt-4">
-              <h1 class="mb-2">BWHS Questionnaire Lookup</h1>              
+              <h1 class="mb-2">BWHS Questionnaire Lookup</h1>
+              <br>              
               <p>
-                Intro text here: Your reference number is the 8 digit number starting with at least two zeros that is found on the bottom of each page of your questionnaire or at the bottom of the return address card on any of your BWHS newsletters. (The reference number does not include the “P” and any numbers after it that are found on the questionnaire, or the “R” if there is one on the newsletter.)
-              </p>
-              <p>
-                If you would prefer to complete the paper version of the questionnaire, please contact the BWHS at 1-800-786-0814 or bwhs@bu.edu to request a mailing. If you would prefer a telephone interview, let us know by calling us or sending an email.
-              </p>              
+                You can use the “look up” features to the left to search for items queried on the main BWHS questionnaires. PDFs of all questionnaires can be found <a href="https://www.bu.edu/bwhs/for-researchers/sample-bwhs-questionnaires/" target="_blank">here</a>. There are two ways to search:
+              </p><br />
+              <div style="padding-left: 20px;">
+                <h4>1.  Search by general category.</h4><br />
+                <p style="padding-left: 20px;">
+                  a.&ensp;&ensp;Click the down arrow under “Select a general category” and select a category from the dropdown menu.
+                  <br/>
+                  b.&ensp;&ensp;Then click the box under “Select a topic.” All “topics” within that category will be shown.
+                  <br/>
+                  c.&ensp;&ensp;Click on your selection to display the questionnaire(s) and page number(s) where the item was queried.
+                  <br/>
+                  d.&ensp;&ensp;Reset your search by clicking on the red button “Reset search.”
+                </p>
+                <h4>2.  Search by topic.</h4><br />
+                <p style="padding-left: 20px;">
+                  a.&ensp;&ensp;Click in the box under “Select a topic” and start typing a search term. Topics matching the first few letters will display. Click on your selection.
+                  <br/>
+                  b.&ensp;&ensp;Then click the corresponding category under “Select a general category” to display the questionnaire(s) and page number(s) where the item was queried.
+                  <br/>
+                  c.&ensp;&ensp;Reset your search by clicking on the red button “Reset search.”
+                </p>
+              </div>                       
             </div>
             <div class="col-md-2"></div>
           </div>          
         </div>
       </div>
     </div>
-    <div id="footer" class="bg-dark" style="height: 200px; bottom:0; position:fixed; width:100%; padding-top:25px;">
+    <!--<div id="footer" class="bg-dark" style="height: 200px; bottom:0; position:fixed; width:100%; padding-top:25px;">
       <div class="row">
         <div class="col-md-2">
           <img src="bu-logo.gif" alt="" style="width:80%; margin-left:15px;">
@@ -83,6 +80,6 @@
         <div class="col-md-8">
         </div>
       </div>
-    </div> 
+    </div>--> 
   </body>
 </html>
